se implementan mejoras sugeridas por sonar